--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:networkSecurityConfig="@xml/network_security_config">
 
         <activity
+            android:name=".BoardDetailActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
             android:name=".MemoActivity"
             android:label="@string/title_activity_memo"
             android:theme="@style/AppTheme.NoActionBar" />
