--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,10 +50,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.7.1' // <retrofit: http api request> https://square.github.io/retrofit/
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0' // <glide: get image from url library> https://github.com/bumptech/glide
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    implementation 'com.squareup:otto:1.3.8'
+    implementation 'com.google.firebase:firebase-analytics:17.2.2' // <fcm> https://firebase.google.com/
+    implementation 'com.squareup:otto:1.3.8' // <event bus> https://github.com/square/otto
+    implementation 'com.pixplicity.easyprefs:library:1.9.0' // <sharedPreference library> https://github.com/Pixplicity/EasyPrefs
 }
