--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2' // <fcm> https://firebase.google.com/
     implementation 'com.squareup:otto:1.3.8' // <event bus> https://github.com/square/otto
     implementation 'com.pixplicity.easyprefs:library:1.9.0' // <sharedPreference library> https://github.com/Pixplicity/EasyPrefs
+//    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0' // <high-definition image magnification> https://github.com/davemorrissey/subsampling-scale-image-view
 }
